Archive/d6737c6f710992cce8a3f28217562da2-25dabfc2c190f5ef027f31d968947336/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:3:7: warning: class 'Component' does not declare any constructor to initialize its non-modifiable members
class Component 
      ^
main.cpp:5:13: note: reference member 'entity' will never be initialized
    Entity& entity;
            ^
main.cpp:6:72: error: member access into incomplete type 'Entity'
    template<class T = Entity> void doAImpl() { static_cast<T&>(entity).a(); } 
                                                                       ^
main.cpp:10:22: note: in instantiation of function template specialization 'Component::doAImpl<Entity>' requested here
        void doA() { doAImpl(); }
                     ^
main.cpp:2:8: note: forward declaration of 'Entity'
struct Entity; // forward-declaration
       ^
1 warning and 1 error generated.
